Ajout du .jar et INSTALL.md